--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,42 +1,14 @@
-{{ partial "header.html" . }}
-<article class="post post-view">
-  <header class="post-header">
-    <h1 class="post-title">{{ .Title }}</h1>
-    <p class="post-meta">
-      {{- if or .Params.author .Site.Params.author -}}
-      {{ .Params.author | default .Site.Params.author }} · {{ end }}
-      {{- .Date.Format "2006.1.2" -}}
-    </p>
-  </header>
-  <div class="post-content">{{ .Content }}</div>
-  <footer class="post-footer">
-    {{ if .Params.tags }}
-    <ul class="post-tags">
-      {{ range .Params.tags }}
-      <li><a href="{{$.Site.BaseURL}}tags/{{ . | urlize }}/">{{ . }}</a></li>
-      {{ end }}
-    </ul>
-    {{ end }}
-  </footer>
-  <!-- Comments system area start -->
-  {{ if not (eq .Params.comments false) }}
-  {{ if .Site.DisqusShortname }}
-  <div id="disqus_thread"></div>
-  <script>
-    var disqus_shortname = '{{ .Site.DisqusShortname }}';
-    (function() { // DON'T EDIT BELOW THIS LINE
-      var d = document, s = d.createElement('script');
-      s.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
-  </script>
-  <noscript>
-    Please enable JavaScript to view the
-    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-  </noscript>
-  <!-- Comments system area end -->
-  {{ end }}
-  {{ end }}
-</article>
-{{ partial "footer.html" . }}
+{{ define "main" }}
+<div class="col-xs-12 col-sm-8 col-md-9 content-column white-background">
+  {{ partial "mobile_nav_toggle.html" . }}
+  <div class="row">
+    <div class="col-lg-8">
+      <div class="content-column-content">
+         <h1>{{ .Title }}</h1>
+         {{ .Content }}
+         {{ template "_internal/disqus.html" . }}
+      </div>
+    </div>
+  </div>
+</div>
+{{ end }}
